refactor: upgrade AI